--- a/About.html
+++ b/About.html
@@ -11,6 +11,7 @@
     <h1>ABOUT</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint vitae repellat sit at, laborum fuga consectetur consequatur quia modi temporibus sequi aut aliquam ducimus nobis unde quis pariatur tenetur repudiandae!</p>
     <img src="download.png" alt="">
+    <marquee behavior="" direction="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eveniet architecto dolorum laborum fugit doloribus ipsum ipsam, velit dolore ex, tempora, ab inventore facilis nam quae nisi sunt aliquid eos.</marquee>
     
 </body>
 </html>
