--- a/About.html
+++ b/About.html
@@ -12,6 +12,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint vitae repellat sit at, laborum fuga consectetur consequatur quia modi temporibus sequi aut aliquam ducimus nobis unde quis pariatur tenetur repudiandae!</p>
     <img src="download.png" alt="">
     <marquee behavior="" direction="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere eveniet architecto dolorum laborum fugit doloribus ipsum ipsam, velit dolore ex, tempora, ab inventore facilis nam quae nisi sunt aliquid eos.</marquee>
-    
+    <marquee behavior="" direction="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tenetur aliquam corrupti facere, eveniet voluptas, nemo, neque nihil natus earum suscipit. Id, rerum illum? Veniam qui excepturi dolorem accusantium recusandae?</marquee>
 </body>
 </html>
